--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,207 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --color1: #9caba0;
+  --color2: #323337;
+  --color3: #e8e8de;
+  --color4: #7d918e;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#root{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+body {
+  color: var(--color2);
+  background-color: var(--color3);
+  font-family: sans-serif;
+  font-size: 1em;
+}
+
+li {
+  list-style: none;
+  padding-right: 10px;
+}
+
+h1 {
+  margin-left: 10px;
+}
+
+a {
+  text-decoration: none;
+  box-shadow: inset 0 0 0 0 var(--color4);
+  color: var(--color4);
+  margin: 0 -.25rem;
+  padding: 0 .25rem;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+
+a:hover {
+  box-shadow: inset 100px 0 0 0 var(--color4);
+  color: white;
+}
+
+.mainContent{
+  height: auto;
+  margin: 0 5rem;
+  justify-content: center;
+}
+
+header {
+  height: 50px;
+  background-color: var(--color2);
+  color: white;
+  background-attachment: fixed;
+  background-position: 80%;
+  z-index: 9999;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+header li, header a {
+  text-decoration: none;
+  color: white;
+  justify-content: space-evenly;
+}
+
+header li:hover {
+  color: var(--color4);
+  cursor: pointer;
+  transition: color .25s ease-in-out, .25s ease-in-out;
+}
+
+nav {
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 10px;
+  font-weight: lighter;
+  font-size: 1.2em;
+  color: white;
+  align-items: center;
+  justify-items: space-around;  
+}
+
+h2 {
+  display: flex;
+  align-items: top;
+  font-family: sans-serif;
+  font-size: 28px;
+  color: var(--color2);
+  width: 170px;
+  text-align: right;
+}
+
+.about {
+  justify-content: center;
+  align-items: center;
+  width: 30em;
+  margin: auto;
+}
+
+.about img {
+  border-radius: 190px;
+  height: 10rem;
+  width: 10rem;
+  margin: auto 2rem;
+}
+
+.about span {
+  color: var(--color4),
+}
+
+
+.projectContainer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 30px 25px 100px 25px;
+}
+
+.project h2 {
+  width: auto;
+  display: block;
+}
+
+.project {
+  background-color: white;
+  margin: 10px 5px;
+  width: 18rem;
+  border-radius: 10px;
+}
+
+.project h3 {
+  font-family: sans-serif;
+  padding: 10px 0;
+  line-height: 1.3;
+  font-size: 18px;
+  font-style: bold;
+  color: var(--color2);
+  text-align: left;
+}
+
+.project img {
+  width: 230px;
+  height: 170px;
+}
+
+.project a:hover {
+  content: "";
+  opacity: 0.5;
+  cursor: pointer;
+  transition: color .25s ease-in-out, .25s ease-in-out;
+
+}
+
+.resume {
+  padding: 30px 25px 100px 25px;
+  text-align: center;
+  justify-content: center;
+  width: 30em;
+  margin: auto;
+}
+
+.contact a {
+  display: block;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-items: center;
+}
+
+button {
+  border-radius: 5px;
+}
+
+footer {
+  background-color: var(--color2);
+  width: 100%;
+  height: 100px;
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+footer a {
+  font-family: "Barlow Semi Condensed", sans-serif;
+  margin: 0 5px;
+  color: var(--color3);
 }
