--- a/src/index.css
+++ b/src/index.css
@@ -103,16 +103,16 @@ h2 {
 }
 
 .about {
-  justify-content: center;
-  align-items: center;
-  width: 30em;
+  justify-content: flex-center;
+  align-items: flex-center;
+  width: 20em;
   margin: auto;
 }
 
 .about img {
   border-radius: 190px;
-  height: 10rem;
-  width: 10rem;
+  height: 20rem;
+  width: 20rem;
   margin: auto 2rem;
 }
 
@@ -173,13 +173,6 @@ h2 {
 
 .contact a {
   display: block;
-}
-
-.contact-form {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-items: center;
 }
 
 button {
